@@ -1,0 +1,3 @@
+Simulates the process of installing a package and then attaching it.
+This is a key part of the 'devtools' package as it allows you to
+rapidly iterate while developing a package.
